2006-03-14 Mark Grondona <mgrondona@llnl.gov>
	* : Initial commit.

	* : tag version 0.1.

	* src/util/edac-ctl : Fix typo preventing --register-labels from
	  doing anything.